--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Michael Imhoff's Porfolio</title>
-
+    <title>&nbsp&nbsp Michael Imhoff &nbsp&nbsp|&nbsp&nbsp Home</title>
+    <link href='https://fonts.googleapis.com/css?family=Libre Franklin' rel='stylesheet'>
     <!--put your external stylesheet links here-->
     <link rel="stylesheet" href="css/style.css">
     <!--[if IE<9]>
@@ -16,14 +16,27 @@
              place these within <style> tags-->
 
 </head>
+<div id="top">
+    <header>
+        <h1>Michael Imhoff</h1>
+    </header>
+</div>
 
-<body>
-    <!--put your initial page content here-->
-    <h1>Michael's Portfolio</h1>
-    <!--you can also use this space for internal scripts; place these within <script> tags-->
+<div id="content">
 
-    <!--put your external script links here-->
-    <script type="text/javascript" src="js/main.js"></script>
-</body>
+    <body style = "margin:0">
+        <!--put your initial page content here-->
+        <!--you can also use this space for internal scripts; place these within <script> tags-->
+
+        <!--put your external script links here-->
+        <script type="text/javascript" src="js/main.js"></script>
+    </body>
+</div>
+
+<div id="bottom">
+    <footer>
+        <h6>Updated Aug 21st, 2023</h6>
+    </footer>
+</div>
 
 </html>
