--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href='https://fonts.googleapis.com/css?family=Libre Franklin' rel='stylesheet'>
     <!--put your external stylesheet links here-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="library/leaflet/leaflet.css" />
+    <script src="library/leaflet/leaflet.js"></script>
     <!--[if IE<9]>
             <link rel="stylesheet" href="css/style.ie.css">
         <![endif]-->
@@ -24,11 +26,12 @@
 
 <div id="content">
 
-    <body style = "margin:0">
+    <body style="margin:0">
         <!--put your initial page content here-->
         <!--you can also use this space for internal scripts; place these within <script> tags-->
 
         <!--put your external script links here-->
+        <script type="text/javascript" src="lib/leaflet/leaflet-src.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </div>
