--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div id="content">
     <div id="map"></div>
-    <button id="resetButton">Reset Map</button>
+    <button id="resetButton" onClick="history.go(0)">Reset Map</button>
 </div>
 
 <div id="top">
