--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--put your external stylesheet links here-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="lib/leaflet/leaflet.css" />
-    <script src="lib/leaflet/leaflet.js"></script>
+    <!--<script src="lib/leaflet/leaflet.js"></script>-->
     <!--[if IE<9]>
             <link rel="stylesheet" href="css/style.ie.css">
         <![endif]-->
@@ -26,7 +26,7 @@
 
 <div id="top">
     <header id="head">
-        <h1>Dane County Parks</h1>
+        <img src="img/seal.png" height="50">&nbsp&nbsp<img src="img/county-of-dane.svg" height="50"><span id="parksTitle">Dane County Parks &nbsp<span id="subtitle">"Always in Season"</span></span>
     </header>
 </div>
 
