Final Version with all links v1.0

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>&nbsp&nbsp Michael Imhoff &nbsp&nbsp|&nbsp&nbsp Home</title>
+    <title>&nbsp&nbsp Dane County Parks Map</title>
     <link href='https://fonts.googleapis.com/css?family=Libre Franklin' rel='stylesheet'>
     <!--put your external stylesheet links here-->
     <link rel="stylesheet" href="css/style.css">
@@ -27,7 +27,9 @@
 <div id="top">
     <header id="head">
         <img src="img/seal.png" height="50">&nbsp&nbsp<img src="img/county-of-dane.svg" height="50"><span id="parksTitle">Dane County Parks &nbsp<span id="subtitle">"Always in Season"</span></span>
+        <a href="https://drive.google.com/drive/folders/1MxP8ggCmCqUBkN2n38KeRPUHf__pS010?usp=sharing"><button id="downloadButton">Download Map Creation Pack</button></a>
     </header>
+
 </div>
 
 <div id="content2">
