--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <div id="bottom">
     <footer>
-        <h6>Updated Aug 21st, 2023</h6>
+        </span><h6>Created by Michael Imhoff for UW-Madison Geography - Updated Aug 15th, 2023</h6>
     </footer>
 </div>
 
